<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    card_view:cardElevation="@dimen/cardview_default_elevation">

    <ImageView
        android:id="@+id/warning_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        android:src="@drawable/ic_warning_white" />

    <RelativeLayout
        android:id="@+id/data_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/date_time_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/date_of_event"
            android:textColor="@color/dark_grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/date_time_caption"
            android:textColor="@color/dark_grey" />

        <TextView
            android:id="@+id/latitude_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/date_time_value"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/latitude"
            android:textColor="@color/dark_grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_time_value"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/latitude_caption"
            android:textColor="@color/dark_grey" />

        <TextView
            android:id="@+id/longitude_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/latitude_caption"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/longitude"
            android:textColor="@color/dark_grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/latitude"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/longitude_caption"
            android:textColor="@color/dark_grey" />

        <TextView
            android:id="@+id/depth_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/longitude_caption"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/depth"
            android:textColor="@color/dark_grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/depth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/longitude_caption"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/depth_caption"
            android:textColor="@color/dark_grey" />

        <TextView
            android:id="@+id/magnitude_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/depth_caption"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/magnitude"
            android:textColor="@color/dark_grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/magnitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/depth"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/magnitude_caption"
            android:textColor="@color/dark_grey" />

    </RelativeLayout>

</android.support.v7.widget.CardView>